correccion en ver eventos deportivos